--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "tailwindcss": "^2.2.7",
     "test-data-bot": "^0.8.0",
+    "twin.macro": "^2.6.2",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -48,6 +50,7 @@
     "@types/jest-axe": "^3.5.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "ava": "^3.15.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
