--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^12.0.0",
@@ -16,6 +17,7 @@
     "axios": "^0.21.1",
     "eslint-config-react-app": "^6.0.0",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
