--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
     "tailwindcss": "^2.2.7",
     "test-data-bot": "^0.8.0",
     "twin.macro": "^2.6.2",
