--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "tailwindcss": "^2.2.7",
