--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
     "eslint-config-react-app": "^6.0.0",
@@ -20,6 +21,7 @@
     "react-debounce-input": "^3.2.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "styled-components": "^5.3.0",
